# tuya-strip

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/tuya_strip/: __main__.py  cli.py
